# sample-agentitest

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  report.html  requirements.txt  test_sample_app.py
.github/workflows/: e2e.yml
backend/: main.py  pyproject.toml
docs/: index.html
docs/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
docs/data/attachments/: 116c6b7eb24f5cba.txt  1233d34798655bbc.txt  125b02473c5ac6bb.txt  1297f65fb3c5e245.txt  12a88ae7815188c3.txt  134b31688c28cfca.txt  13ddc07738cd5e8a.txt  16f20f1a1407e72c.txt  1778a3e2c6012a56.txt  178821ad7e2ce2c0.txt  1866059ad6ed1aba.txt  187e9f62410dc413.txt  197f658f0b06076c.txt  198f9093a42f9a2b.txt  1a74201f7b415d80.txt  1af5eeaa15859e67.txt  1bddeb1759d3d902.txt  1c0c09866c1b4016.txt  (+356 more)
docs/export/: influxDbData.txt  prometheusData.txt
docs/history/: duration-trend.json  history-trend.json  history.json
docs/widgets/: behaviors.json  duration-trend.json  duration.json  environment.json  severity.json  status-chart.json  suites.json  summary.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
terraform/: apigateway.tf  backend.tfvars.example  cloudfront.tf  cognito.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
terraform/setup/: github_oidc.tf  outputs.tf  state_bucket.tf  variables.tf
tests/agentitest/: conftest.py  test_sample_app.py
tests/e2e/: conftest.py  test_auth.py  test_home.py  test_navigation.py  test_todo.py
(+137 files in other folders)
